--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 <script>
 
+var DEBUG = true
+
 $(document).ready(function(){
 
 	if(DEBUG){
@@ -344,6 +346,57 @@ $(document).ready(function(){
 				</div>
 			</div>
 		</div>
+		<div class="article">
+			<div class="cover page">
+				<div class="content">
+					<h1>Configuration demo</h1>
+
+					<div>
+						Pages in ribbon: <input id="PAGES_IN_RIBBON" type="text"><button onclick="saveSettings()">save</button>
+					</div>
+					<div>
+						Fit page to view: <button id="FIT_PAGE_TO_VIEW" onclick="toggleSetting(this)"></button>
+					</div>
+					<div>
+						Animate window resize: <button id="ANIMATE_WINDOW_RESIZE" onclick="toggleSetting(this)"></button>
+					</div>
+					<div>
+						Drag in full page view: <button id="DRAG_FULL_PAGE" onclick="toggleSetting(this)"></button>
+					</div>
+
+					<div style="position:absolute; width:100%; bottom:10px; text-align: right;">
+						<a href="#home">magazine cover...</a><br>
+					</div>
+
+					<script>
+
+					function saveSettings(){
+						var v = parseInt($('#PAGES_IN_RIBBON').attr('value'))
+						PAGES_IN_RIBBON = v == null ? PAGES_IN_RIBBON : v
+						FIT_PAGE_TO_VIEW = $('#FIT_PAGE_TO_VIEW').text() == 'true' ? true : false
+						ANIMATE_WINDOW_RESIZE = $('#ANIMATE_WINDOW_RESIZE').text() == 'true' ? true : false
+						DRAG_FULL_PAGE = $('#DRAG_FULL_PAGE').text() == 'true' ? true : false
+					}
+					function loadSettings(){
+						$('#PAGES_IN_RIBBON').attr('value', PAGES_IN_RIBBON)
+						$('#FIT_PAGE_TO_VIEW').text(FIT_PAGE_TO_VIEW)
+						$('#ANIMATE_WINDOW_RESIZE').text(ANIMATE_WINDOW_RESIZE)
+						$('#DRAG_FULL_PAGE').text(DRAG_FULL_PAGE)
+					}
+					function toggleSetting(obj){
+						obj = $(obj)
+						obj.text() == 'true' ? obj.text('false') : obj.text('true')
+						saveSettings()
+						updateView()	
+					}
+
+
+					loadSettings()
+
+					</script>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
 </div>
@@ -352,3 +405,4 @@ $(document).ready(function(){
 
 </body>
 </html>
+<!-- vim:set ts=4 sw=4 nowrap : -->
