--- a/index.html
+++ b/index.html
@@ -364,6 +364,10 @@ $(document).ready(function(){
 					<div>
 						Drag in full page view: <button id="DRAG_FULL_PAGE" onclick="toggleSetting(this)"></button>
 					</div>
+					<p>
+					NOTE: this is not an actual configuration page, just a live demo 
+					of some of the available configuration option effects.
+					</p>
 
 					<div style="position:absolute; width:100%; bottom:10px; text-align: right;">
 						<a href="#back">go back</a>, or return to <a href="#home">magazine cover...</a><br>
