--- a/index.html
+++ b/index.html
@@ -26,20 +26,7 @@ $(document).ready(function(){
 
 
 	$(window)
-		.resize(function() {
-			// XXX might be good to compensate for document zoom...
-			if(document.width/$(document).width() != 1){
-				// XXX scale the page...
-				console.log('>>> Page Zoom:', document.width/$(document).width())
-			}
-			//$('.splash').show()
-			if(ANIMATE_WINDOW_RESIZE){
-				updateView()
-			} else {
-				unanimated($('.scaler'), updateView, 30)()
-			}
-			//$('.splash').fadeOut()
-		})
+		.resize(viewResizeHandler)
 		.bind('hashchange', hashChangeHandler)
 
 	$('.viewer')
