--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ $(document).ready(function(){
 	$('.button.prev-article').swipe({click: prevArticle})
 
 	loadState()
+	setupNavigator()
 
 	togglePageView('on')
 
@@ -117,6 +118,12 @@ $(document).ready(function(){
 		<div class="button next-article">Next Article</div>
 	</div>
 	<div class="bottom-toolbar">
+		<!-- position indicator -->
+		<div class="navigator">
+			<div class="bar">
+				<div class="indicator"></div>
+			</div>
+		</div>
 		<!-- this is just an example-->
 		<a href="#home">Cover</a> |
 		<a href="#prevArticle">Previous article</a> |
