almost finished the navigator (only dragging is not done)...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -118,19 +118,21 @@ $(document).ready(function(){
 		<div class="button next-article">Next Article</div>
 	</div>
 	<div class="bottom-toolbar">
+		<!-- this is just an example-->
+		<div class="controls">
+			<a href="#home">Cover</a> |
+			<a href="#prevArticle">Previous article</a> |
+			<a href="#prev">Previous page</a> |
+			<a href="#next">Next page</a> | 
+			<a href="#nextArticle">Next article</a> |
+			<a href="#end">End</a>
+		</div>
 		<!-- position indicator -->
 		<div class="navigator">
 			<div class="bar">
 				<div class="indicator"></div>
 			</div>
 		</div>
-		<!-- this is just an example-->
-		<a href="#home">Cover</a> |
-		<a href="#prevArticle">Previous article</a> |
-		<a href="#prev">Previous page</a> |
-		<a href="#next">Next page</a> | 
-		<a href="#nextArticle">Next article</a> |
-		<a href="#end">End</a>
 	</div>
 
 <div class="scaler">
@@ -314,21 +316,6 @@ $(document).ready(function(){
 				</div>
 			</div>
 
-			<div class="page">
-				<div class="content">
-					Page
-				</div>
-			</div>
-			<div class="page">
-				<div class="content">
-					Page
-				</div>
-			</div>
-			<div class="page">
-				<div class="content">
-					Page
-				</div>
-			</div>
 			<div class="page">
 				<div class="content">
 					Page
