added support for pages of different sizes (still a bit flaky)...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -294,8 +294,8 @@ $(document).ready(function(){
 					Page
 				</div>
 			</div>
-			<div class="page">
-				<div class="content">
+			<div class="page no-resize">
+				<div class="content" style="background:gold">
 					Page
 				</div>
 			</div>
