more playing with page sizes (still flaky)...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -299,18 +299,18 @@ $(document).ready(function(){
 					Page
 				</div>
 			</div>
-			<div class="page">
-				<div class="content">
+			<div class="page no-resize">
+				<div class="content" style="background:yellow; width: 600px">
 					Page
 				</div>
 			</div>
-			<div class="page">
-				<div class="content">
+			<div class="page no-resize">
+				<div class="content" style="background:gold; width: 400px">
 					Page
 				</div>
 			</div>
-			<div class="page">
-				<div class="content">
+			<div class="page no-resize">
+				<div class="content" style="background:orange; width: 200px">
 					Page
 				</div>
 			</div>
