--- a/index.html
+++ b/index.html
@@ -352,6 +352,9 @@ $(document).ready(function(){
 					<div>
 						Drag in full page view: <button id="DRAG_FULL_PAGE" onclick="toggleSetting(this)"></button>
 					</div>
+					<div>
+						Enable different size pages: <button id="_USE_REAL_SIZES" onclick="toggleSetting(this)"></button>
+					</div>
 					<p>
 					NOTE: this is not an actual configuration page, just a live demo 
 					of some of the available configuration option effects.
@@ -369,12 +372,14 @@ $(document).ready(function(){
 						FIT_PAGE_TO_VIEW = $('#FIT_PAGE_TO_VIEW').text() == 'true' ? true : false
 						ANIMATE_WINDOW_RESIZE = $('#ANIMATE_WINDOW_RESIZE').text() == 'true' ? true : false
 						DRAG_FULL_PAGE = $('#DRAG_FULL_PAGE').text() == 'true' ? true : false
+						_USE_REAL_SIZES = $('#_USE_REAL_SIZES').text() == 'true' ? true : false
 					}
 					function loadSettings(){
 						$('#PAGES_IN_RIBBON').attr('value', PAGES_IN_RIBBON)
 						$('#FIT_PAGE_TO_VIEW').text(FIT_PAGE_TO_VIEW)
 						$('#ANIMATE_WINDOW_RESIZE').text(ANIMATE_WINDOW_RESIZE)
 						$('#DRAG_FULL_PAGE').text(DRAG_FULL_PAGE)
+						$('#_USE_REAL_SIZES').text(_USE_REAL_SIZES)
 					}
 					function toggleSetting(obj){
 						obj = $(obj)
