reverted to a longish viewer animation; different-sized pages still not working correctly on full/tn ...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ $(document).ready(function(){
 						Drag in full page view: <button id="DRAG_FULL_PAGE" onclick="toggleSetting(this)"></button>
 					</div>
 					<div>
-						Enable different size pages: <button id="_USE_REAL_SIZES" onclick="toggleSetting(this)"></button>
+						Enable different size pages (still flaky): <button id="_USE_REAL_SIZES" onclick="toggleSetting(this)"></button>
 					</div>
 					<p>
 					NOTE: this is not an actual configuration page, just a live demo 
