seem to have broken the android version, searching for a fix...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@ $(document).ready(function(){
 			},
 
 			//excludedElements: '.noSwipe',
-			//fingers: $.fn.swipe.fingers.ALL
-			fingers: $.fn.swipe.fingers.THREE
+			fingers: $.fn.swipe.fingers.ALL
+			//fingers: $.fn.swipe.fingers.THREE
 		})
 
 	// XXX do we need these here??
